# Stellar-IndigoPay

./: .gitignore  .gitleaks.toml  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY_#214.md  LICENSE  PR_DESCRIPTION.md  PR_DESCRIPTION_131.md  PR_DESCRIPTION_379.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  issue-168  package-lock.json  package.json  zap-false-positives.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json
contracts/: Cargo.toml  EVENTS.md  README.md
contracts/escrow-contract/: Cargo.toml
contracts/escrow-contract/src/: lib.rs
contracts/escrow-contract/test_snapshots/tests/: release_missing_job_panics.1.json
contracts/escrow-contract/tests/: claim.rs  create_job.rs  dispute.rs  release_escrow.rs
contracts/escrow-contract/tests/common/: mod.rs
contracts/indigopay-contract/: .tarpaulin.toml  Cargo.toml  ORACLE.md  README.md  SECURITY.md  UPGRADE.md
contracts/indigopay-contract/proptest-regressions/: fuzz_tests.txt
contracts/indigopay-contract/src/: fuzz_tests.rs  lib.rs
docs/: DEPLOYMENT.md  api.md  architecture.md  contract-integration.md  database.md  deployment-mainnet.md  disaster-recovery.md  extension-build-process.md  getting-started.md  indexer.md  issue-157.md  openapi.yml  performance.md  walkthrough.md  zap-triage.md
extension/: PUBLISH.md  jest.config.js  popup.css  (+8 more)
(+332 files in other folders)
