[package]
name = "escrow-contract"
version = "0.1.0"
edition = "2021"
description = "Soroban escrow — client-funded jobs and release_escrow to freelancer"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "27.0.0"

[dev-dependencies]
soroban-sdk = { version = "27.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

